polished edit page, squashing bugs across site

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -703,38 +703,27 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 
 //* Profile Edit Page
+.edit-title{
+  color: white;
+  padding: 10px 0 8px;
+}
 .edit-profile-page {
-  margin-left: 22px;
+  margin: 22px;
 
-  .finish-edit {
-    background-color: #31B94D;
-        color: white;
-        padding: 6px;
-        margin-bottom: 6px;
-        border-radius: 20px;
-  }
-
-  .edit-title{
-    color: white;
-    padding: 10px 0 8px;
+  .line-break {
+    margin: 12px;
   }
   
   .top-section {
   display: flex;
   justify-content: space-around;
   
-    .edit-profile-details{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  
     .edit-profile-photos{
       display: flex;
-      flex-direction: column;
-      width: 50%;
+      flex-direction: row;
+      // width: 50%;
       align-items: center;
-      justify-content: space-around;
+      // justify-content: space-around;
   
       .edit-photos{
         display: flex;
@@ -746,7 +735,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
         background: #d46d5b;
         border-radius: 25px;
         border-color: #800000;
-        transform: translate(-13px)
+        transform: translate(590%, 375% )
         }
       }
       .add-photo {
@@ -779,7 +768,37 @@ Note: Beware of modifying this element as it can break the animations - you shou
       }
     }
   }
-}
+
+  .edit-profile-details{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    // margin: 50px;
+    height: 200px;
+    // align-content: space-around;
+    
+    .input-box{
+      padding: 8px;
+        margin-bottom: 10px;
+      h3.edit-titles{
+        color: white;
+      }
+      .input{
+        padding: 10px;
+        width: 75%;
+        border-radius: 5px;
+        font-size: medium;
+      }}}
+      button.finish-edit {
+        background-color: #31B94D;
+            color: white;
+            position: relative;
+            left: 45%;
+            font-size: small;
+            padding: 15px 35px 15px 35px;
+            margin-bottom: 15px;
+            border-radius: 20px;
+      }}
 
 
 
@@ -791,7 +810,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
   height:80px;
   width:100%;
-  background-color: rgba(250, 100, 0, 0.4);
+  background-color: rgba(250, 100, 0, 0.7);
   .header-left{
     padding-left: 10px;
     // width: 70px;
